finish formation page style (computer)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
             <h1>ASquared Consulting</h1>
         </a>
         <div>
-            <a class="btn" href="mailto:valerie@a2consulting.io" >Contactez-moi</a>
+            <a class="btn" href="mailto:valerie@a2consulting.io" target="_blank">Contactez-moi</a>
         </div>
     </nav>
 </header>
